Archive2/00/6cfd1ccce682b5/output
main.cpp: In function 'int main()':
main.cpp:8:9: error: no matching function for call to 'lol::lol()'
     lol l;
         ^
main.cpp:8:9: note: candidate is:
main.cpp:2:5: note: lol::lol(const lol&) <deleted>
     lol(const lol&) = delete;
     ^
main.cpp:2:5: note:   candidate expects 1 argument, 0 provided
