Archive2/00/6cfd1ccce682b5/main.cpp
struct lol {
    lol(const lol&) = delete;
    lol& operator=(const lol&) = delete;
};

int main() {
//    auto x = lol{};
    lol l;
}